style.css
:root {
  --light-green: #22c55e;
}

* {
  margin: 0;
  padding: 0;
  font: inherit;
}

.search-icon {
  width: 20px;
  cursor: pointer;
}

.profile-pic {
  height: 40px;
  width: 40px;
  border-radius: 50%;
}

body {
  display: grid;
  grid-template-columns: 1fr 4fr;
}

main {
  grid-area: 2 / 2 / 3 / 3;
}

aside {
  grid-row: 1 / 3;
  background-color: var(--light-green);
}

.dash-icon {
  width: 50px;
}

ul {
  display: grid;
  grid-template-columns: 1fr 2fr;
  align-items: center;
}

a {
  text-decoration: none;
  color: black;
}

a:hover {
  text-decoration: underline black 3px;
  color: black;
}

